# vm-scheduler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: amazon-cloudwatch-agent.json  assignments.go  config.go  container_launch.go  go.mod  main.go  readme.md  run_job.go  s3_utils.go  state.go  supervisord.conf
client/docker_utils/: helpers.go
client/poller/: poll_assignments.go  server_api.go
client/registry/: config.go  registry.go  state.go
client/runner/: run_job.go  server_api.go
client/s3_utils/: helpers.go
docker/: Dockerfile  agent.Dockerfile  client.Dockerfile  dev.Dockerfile  docker-compose.yml  install.sh  push_agent_docker.sh  push_server_docker.sh  readme.md  run-container.sh
docs/: api.md  architecture.md  deploy.md  scheduler-schema.drawio  vm_scheduler.drawio  vm_scheduler_seq_v3.drawio
docs/uml-diagrams/: classes.puml  classes.txt  db_schema.puml  job_state.puml  vm_state.puml  workflow.puml
infra/: CMakeLists.txt
infra/allocator/aws_allocator/: CMakeLists.txt  aws_allocator.cpp  aws_allocator.h  aws_ec2_config.h
infra/allocator/aws_allocator/tests/: CMakeLists.txt  test.cpp
infra/aws/ec2/: CMakeLists.txt  allocator.cpp  allocator.h  client.cpp  client.h  config.cpp  config.h  vm_selector.cpp  vm_selector.h
infra/aws/ec2/tests/: CMakeLists.txt  test.cpp
infra/aws_allocator/: CMakeLists.txt  aws_allocator.cpp  aws_allocator.h
infra/in_memory/task_queue/: CMakeLists.txt  task_queue.cpp  task_queue.h
infra/in_memory/vm_storage/: CMakeLists.txt  scheduler.cpp  vm_selector.cpp  vm_storage.cpp  vm_storage.h
infra/task_queue/in_memory_task_queue/: CMakeLists.txt  in_memory_task_queue.cpp  in_memory_task_queue.h
infra/task_queue/in_memory_task_queue/tests/: CMakeLists.txt  test.cpp
internals/: readme.md
lib/: CMakeLists.txt
lib/allocator/: CMakeLists.txt  allocator.h  slot.h
lib/blob_storage/: blob_storage.h
lib/common/: CMakeLists.txt  env.cpp  errors.h  log.h  result.h  slot.h  stringify.h  types.h  vm.h
lib/task/: CMakeLists.txt  task.cpp  task.h  task_state.h  task_type.h  vm_space.h
lib/task_queue/: CMakeLists.txt  task_info.h  task_queue.h
lib/vm_selector/: CMakeLists.txt  vm_selector.cpp  vm_selector.h
lib/vm_storage/: CMakeLists.txt  vm_storage.cpp  vm_storage.h
libs/: CMakeLists.txt
libs/allocator/: CMakeLists.txt  allocator.h
libs/allocator/impl/: allocator.cpp  config.cpp
libs/allocator/include/: allocator.h  cloud_client.h  cloud_client_mock.h  config.h
libs/allocator/tests/: CMakeLists.txt  allocator.cpp
libs/aws/allocator/: CMakeLists.txt
libs/aws/allocator/impl/: cloud_client.cpp  config.cpp  describe_instance_types.cpp  describe_instance_types.h  describe_instances.cpp  describe_instances.h  errors.h  helpers.cpp  helpers.h  select_instance_type.h  vm_selector.cpp
libs/aws/allocator/include/: cloud_client.h  config.h
libs/aws/allocator/tests/: CMakeLists.txt  aws_allocator.cpp  instance_type_selection.cpp  test.cpp
libs/blob_storage/: blob_storage.h  task_blob.h
libs/common/: CMakeLists.txt
libs/common/impl/: base64.cpp  env.cpp  errors.cpp  slot.cpp  time.cpp
libs/common/include/: base64.h  env.h  errors.h  hash.h  log.h  result.h  slot.h  stringify.h  time.h  types.h
libs/concurrency/: CMakeLists.txt
libs/concurrency/impl/: background_thread.cpp
libs/concurrency/include/: background_thread.h
libs/db/: CMakeLists.txt
libs/db/data/: db_schema.sql
libs/db/impl/: errors.h  pg_task_storage.cpp  test_utils.cpp  test_utils.h
libs/db/include/: pg_task_storage.h
libs/db/tests/: CMakeLists.txt  agent_logic.cpp  failure_detection.cpp  helpers.cpp  helpers.h  pg_storage.cpp
libs/failure_detector/: CMakeLists.txt
libs/failure_detector/impl/: config.cpp  failure_detector.cpp
libs/failure_detector/include/: config.h  failure_detector.h
libs/failure_detector/tests/: CMakeLists.txt  failure_detector.cpp
libs/postgres/: CMakeLists.txt
libs/postgres/impl/: connection.cpp  connection.h  helpers.cpp  pg_pool.cpp  txn.cpp  txn.h
libs/postgres/include/: helpers.h  pg_pool.h
libs/scheduler/: CMakeLists.txt
libs/scheduler/impl/: complex_vm_assigner.cpp  complex_vm_assigner.h  complex_vm_assigner_config.cpp  complex_vm_assigner_config.h  config.cpp  create_vm_assigner.cpp  job_allocator.cpp  job_allocator.h  ordered_jobs.cpp  ordered_jobs.h  scheduler.cpp  scheduling_orderer.h  simple_vm_assigner.cpp  simple_vm_assigner.h  slot_selector.h  vm_slot_selector.cpp  vm_slot_selector.h
libs/scheduler/include/: config.h  create_vm_assigner.h  scheduler.h  vm_assginer.h  vm_assigner.h
libs/scheduler/tests/: CMakeLists.txt  best_fit_descending.cpp  max_min_best_fit.cpp  max_min_best_fit_vm_assigner.cpp  max_min_worst_fit.cpp  scheduler.cpp  simple_vm_assigner.cpp  test_utils.cpp  test_utils.h  worst_fit_descending.cpp
libs/server/: CMakeLists.txt
libs/server/impl/: agent_api_service.cpp  config.cpp  errors.h  grpc_server.cpp  helpers.cpp  helpers.h  public_api_service.cpp  test_utils.cpp  test_utils.h
libs/server/include/: agent_api_service.h  config.h  grpc_server.h  public_api_service.h
libs/state/: CMakeLists.txt
libs/state/impl/: config.cpp  state.cpp  task.cpp  vm.cpp
libs/state/include/: config.h  errors.h  state.h  task.h  vm.h  vm_space.h
libs/task_registry/: CMakeLists.txt
libs/task_registry/impl/: config.cpp  task_registry.cpp
libs/task_registry/include/: config.h  task_registry.h
libs/task_registry/tests/: CMakeLists.txt  CMakeLists.txt.in  task_registry.cpp
libs/task_storage/: CMakeLists.txt
libs/task_storage/include/: task_storage.h  task_storage_mock.h
libs/zookeeper/: CMakeLists.txt
libs/zookeeper/impl/: dist_lock.cpp  zk_config.cpp
libs/zookeeper/include/: dist_lock.h  zk_config.h
proto/: CMakeLists.txt
proto/services/: agent_api.proto  public_api.proto
proto/structures/: agent.proto  job.proto  task.proto  task_addition_result.proto  task_execution_result.proto  task_state.proto
test-task/: run.py  test-task.Dockerfile
