project(vm_scheduler_lib)

set(CMAKE_CXX_STANDARD_REQUIRED 20)

add_subdirectory(allocator)
add_subdirectory(aws/allocator)
add_subdirectory(aws/allocator/tests)
add_subdirectory(common)
add_subdirectory(db)
add_subdirectory(scheduler)
add_subdirectory(server)
add_subdirectory(state)
add_subdirectory(task_registry)
add_subdirectory(task_registry/tests)
add_subdirectory(task_storage)
