add_subdirectory(allocator)
add_subdirectory(aws/allocator)
#add_subdirectory(aws/allocator/tests)
add_subdirectory(concurrency)
add_subdirectory(common)
add_subdirectory(db)
add_subdirectory(failure_detector)
add_subdirectory(postgres)
add_subdirectory(scheduler)
add_subdirectory(server)
add_subdirectory(state)
add_subdirectory(task_registry)
add_subdirectory(task_registry/tests)
add_subdirectory(task_storage)
